--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,28 @@ transition:
   padding 0.5s ease
 ;
 }
+
+#title_part{
+  width: 100%;
+}
+
+#title_part h1{
+  width: 80%;
+  margin: 0;
+  float:left;
+}
+
+#title_part p{
+  width: 80%;
+  margin: 0;
+  float:left;
+}
+
+#server_settings{
+  width: 20%;
+  margin: 0;
+}
+
 .main.menu .item img.logo {
 margin-right: 1.5em;
 }
